[package]
name = "construct-transport"
version = "0.1.0"
authors = ["Construct Team"]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/construct-msg/construct-transport"

# Phase 0 diagnostic spike: prove bidi gRPC-over-HTTP/3 works on a native
# quinn+h3 server (no Traefik). Versions pinned to match construct-engine,
# which already compiles this stack for aarch64-apple-ios.

# staticlib/cdylib for the UniFFI iOS surface (Phase 1); lib for the bins/tests.
[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = { version = "0.13", default-features = false, features = ["ring"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
http = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# h3 -> h2c upstream leg (Phase 0.5 reverse proxy to envoy:8080)
hyper = { version = "1", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio-stream = "0.1"

# UniFFI surface (Phase 1) — Swift bindings for iOS. "tokio" drives async FFI
# methods; "cli" provides the uniffi-bindgen binary.
uniffi = { version = "0.28", features = ["tokio", "cli"] }
thiserror = "2"

[dev-dependencies]
# h2c echo upstream (stands in for envoy) in the proxy integration test
hyper = { version = "1", features = ["server", "http2"] }
